feat: implement diagnosis flow
